crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__max_doc_length_with_utf_8.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W505 Doc line too long (57 > 50)
 --> W505_utf_8.py:2:50
  |
1 | #!/usr/bin/env python3
2 | """Here's a top-level ß9💣2ℝing that's over theß9💣2ℝ."""
  |                                                    ^^^^^^

W505 Doc line too long (56 > 50)
 --> W505_utf_8.py:6:49
  |
5 | def f1():
6 |     """Here's a ß9💣2ℝing that's also over theß9💣2ℝ."""
  |                                                   ^^^^^^
7 |
8 |     x = 1  # Here's a comment that's over theß9💣2ℝ, but it's not standalone.

W505 Doc line too long (56 > 50)
  --> W505_utf_8.py:10:51
   |
 8 |     x = 1  # Here's a comment that's over theß9💣2ℝ, but it's not standalone.
 9 |
10 |     # Here's a standalone comment that's over theß9💣2ℝ.
   |                                                   ^^^^^^
11 |
12 |     x = 2

W505 Doc line too long (94 > 50)
  --> W505_utf_8.py:13:51
12 |     x = 2
13 |     # Another standalone that is preceded by a newline and indent token and is over theß9💣2ℝ.
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 |     print("Here's a string that's over theß9💣2ℝ, but it's not a ß9💣2ℝing.")

W505 Doc line too long (61 > 50)
  --> W505_utf_8.py:18:50
18 | "This is also considered a ß9💣2ℝing, and is over theß9💣2ℝ."
   |                                                   ^^^^^^^^^^^

W505 Doc line too long (82 > 50)
  --> W505_utf_8.py:24:50
   |
22 |     """Here's a multi-line ß9💣2ℝing.
23 |
24 |     It's over theß9💣2ℝ on this line, which isn't the first line in the ß9💣2ℝing.
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |     """

W505 Doc line too long (85 > 50)
  --> W505_utf_8.py:31:50
   |
29 |     """Here's a multi-line ß9💣2ℝing.
30 |
31 |     It's over theß9💣2ℝ on this line, which isn't the first line in the ß9💣2ℝing."""
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
