crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__tab_size_2.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501 Line too long (7 > 6)
 --> E501_2.py:2:7
  |
1 | # aaaa
2 | # aaaaa
  |       ^
3 |     # a
4 |     # a

E501 Line too long (7 > 6)
 --> E501_2.py:3:7
  |
1 | # aaaa
2 | # aaaaa
3 |     # a
  |       ^
4 |     # a
5 |     # aa

E501 Line too long (7 > 6)
 --> E501_2.py:6:6
  |
4 |     # a
5 |     # aa
6 |     # aaa
  |         ^
7 |     # aaaa
8 |         # a

E501 Line too long (8 > 6)
 --> E501_2.py:7:6
  |
5 |     # aa
6 |     # aaa
7 |     # aaaa
  |         ^^
8 |         # a
9 |         # aa

E501 Line too long (7 > 6)
  --> E501_2.py:8:5
 6 |     # aaa
 7 |     # aaaa
 8 |         # a
   |           ^
 9 |         # aa
10 |         # aaa

E501 Line too long (8 > 6)
  --> E501_2.py:9:5
 7 |     # aaaa
 8 |         # a
 9 |         # aa
   |           ^^
10 |         # aaa

E501 Line too long (9 > 6)
  --> E501_2.py:10:5
   |
 8 |         # a
 9 |         # aa
10 |         # aaa
   |           ^^^
11 |
12 | if True: # noqa: E501

E501 Line too long (7 > 6)
  --> E501_2.py:14:6
   |
12 | if True: # noqa: E501
13 |     [12]
14 |     [12 ]
   |         ^
15 |     [1,2]
16 |     [1, 2]

E501 Line too long (8 > 6)
  --> E501_2.py:16:6
   |
14 |     [12 ]
15 |     [1,2]
16 |     [1, 2]
   |         ^^
