crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__task_tags_false.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501 Line too long (149 > 88)
 --> E501_1.py:1:89
  |
1 | … task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | …onfigured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
3 | …task-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (158 > 88)
 --> E501_1.py:2:89
  |
1 | …k-tags sometimes are longer than line-length so that you can easily find them with `git grep`
2 | …gured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | …-tags sometimes are longer than line-length so that you can easily find them with `git grep`
4 | …ed task-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (148 > 88)
 --> E501_1.py:3:89
  |
1 | …d task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
2 | …configured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
3 | … task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 | …figured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
5 | …ed task-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (155 > 88)
 --> E501_1.py:4:89
  |
2 | …igured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
3 | …k-tags sometimes are longer than line-length so that you can easily find them with `git grep`
4 | …red task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 | …ask-tags sometimes are longer than line-length so that you can easily find them with `git grep`
6 | …sk-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (150 > 88)
 --> E501_1.py:5:89
3 | …task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
4 | …igured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
5 | …d task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 | … task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
7 | …figured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (149 > 88)
 --> E501_1.py:6:89
  |
4 | …igured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
5 | …d task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
6 | … task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | …figured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
8 | …configured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (156 > 88)
 --> E501_1.py:7:89
  |
5 | …ask-tags sometimes are longer than line-length so that you can easily find them with `git grep`
6 | …sk-tags sometimes are longer than line-length so that you can easily find them with `git grep`
7 | …ured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 | …figured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`

E501 Line too long (159 > 88)
 --> E501_1.py:8:89
  |
6 | …-tags sometimes are longer than line-length so that you can easily find them with `git grep`
7 | …ed task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
8 | …gured task-tags sometimes are longer than line-length so that you can easily find them with `git grep`
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
